[tool.isort]
profile = "black"

[tool.poetry]
name = "stable-diffusion"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
transformers = "^4.21.2"
scipy = "^1.9.0"
ftfy = "^6.1.1"
diffusers = "^0.2.4"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
autoflake = "^1.4"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
